# cpp-bbunit

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  assert-count.html  assert-optional.html  bbunit_8hpp_source.html  because.html  classBBUnit_1_1ProvidesAssertions-members.html  classBBUnit_1_1ProvidesAssertions.html  classBBUnit_1_1ProvidesAssertions.js  classBBUnit_1_1TestCase-members.html  classBBUnit_1_1TestCase.html  classBBUnit_1_1TestResults.js  classBBUnit_1_1TestResults__coll__graph.dot  classBBUnit_1_1TestRunner-members.html  classBBUnit_1_1Utilities_1_1Printer-members.html  classBBUnit_1_1Utilities_1_1Printer.html  classes.html  dir_46a94b941189781fed1708d31080e470.html  dir_47af3e5c46f6d5fc7837ba2ea7542cab.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d44c64559bbebec7f509842c48db8b23.html  equals-custom-class.html  exceptions.html  first-test.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_3.dot  inherit_graph_5.dot  inherit_graph_7.dot  (+38 more)
cmake/: cpp_bbunitConfig.cmake
docs/: index.md
html/: assert-count.html  because.html  classBBUnit_1_1ProvidesAssertions.js  classBBUnit_1_1ProvidesAssertions__inherit__graph.dot  classBBUnit_1_1TestCase.html  classBBUnit_1_1TestCase.js  classBBUnit_1_1TestCase__coll__graph.dot  classBBUnit_1_1TestResults-members.html  classBBUnit_1_1TestResults.html  classBBUnit_1_1TestRunner.html  dir_1afc251118eb76a3460be67774c5c574.html  equals-custom-class.html  (+35 more)
(+142 files in other folders)
